--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -160,3 +160,74 @@
   font-weight: 500;
   margin: 10px 0;
 }
+
+.dropdown {
+  position: relative;
+  margin-top: 10px;
+  width: 170px;
+  height: 35px;
+}
+
+.dropdown::before {
+  content: "";
+  position: absolute;
+  right: 8px;
+  top: 15px;
+  z-index: 1000;
+  width: 5px;
+  height: 5px;
+  border: 2px solid #333;
+  border-top: 2px solid #fff;
+  border-right: 2px solid #fff;
+  transform: rotate(-45deg);
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.dropdown.active::before {
+  top: 12px;
+  transform: rotate(-225deg);
+}
+
+.dropdown input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  background: #383838;
+  color: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  padding: 12px 20px;
+  border-radius: 12px;
+}
+
+.dropdown input::placeholder {
+  color: #fff;
+  opacity: 0.7;
+}
+
+.dropdown .delivery-options {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  background: #383838;
+  color: #fff;
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  overflow: hidden;
+  font-size: 12px;
+  display: none;
+}
+
+.dropdown.active .delivery-options {
+  display: block;
+}
+
+.dropdown .delivery-options div {
+  padding: 10px 20px;
+  cursor: pointer;
+}
